--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4441,6 +4441,14 @@ body {
 	font-size: 40px;
 }
 
+.fixed-whats{
+  position: fixed;
+  bottom: 5rem;
+  right: 2rem; 
+  cursor: pointer;
+}
+
+
 //Responsive
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
